--- a/Team 2_Mini Project/css/index_style.css
+++ b/Team 2_Mini Project/css/index_style.css
@@ -2,7 +2,7 @@
   text-decoration: none;
 }
 
-#grid {
+#grid_index {
   border-bottom: 2px solid #8B2331;
   display: grid;
   grid-template-columns: 400px 700px 210px 80px;
@@ -16,7 +16,7 @@
 
 .titletext {
   text-align: center;
-  color: #8B2331;
+  font-color: #8B2331;
   font-family: KorUB;
   font-size:35px;
   font-weight: bold;
