--- a/Team 2_Mini Project/css/menu_style.css
+++ b/Team 2_Mini Project/css/menu_style.css
@@ -4,9 +4,10 @@ nav {
   width: 640px;
   margin: 1em auto;
   font-family: KorUL;
-  font-size: 20px
+  font-size: 18px;
 }
 nav a {
+  margin: auto;
   display: block;
   width: 20%;
   padding: .75em 0;
@@ -18,38 +19,26 @@ nav a {
   position: absolute;
   left: 0;
   bottom: -5px;
-  width: 20%;
+  width: 25%;
   height: 2px;
   background: #706258;
   transition: all .3s ease-in-out;
 }
 nav a:nth-child(1).is-current ~ .nav-underline {
-  left: 0;
+  left: 5%;
 }
 nav a:nth-child(2).is-current ~ .nav-underline {
-  left: 20%;
+  left: 37.5%;
 }
 nav a:nth-child(3).is-current ~ .nav-underline {
-  left: 40%;
-}
-nav a:nth-child(4).is-current ~ .nav-underline {
-  left: 60%;
-}
-nav a:nth-child(5).is-current ~ .nav-underline {
-  left: 80%;
+  left: 70%;
 }
 nav a:nth-child(1):hover ~ .nav-underline {
-  left: 0;
+  left: 5%;
 }
 nav a:nth-child(2):hover ~ .nav-underline {
-  left: 20%;
+  left: 37.5%;
 }
 nav a:nth-child(3):hover ~ .nav-underline {
-  left: 40%;
-}
-nav a:nth-child(4):hover ~ .nav-underline {
-  left: 60%;
-}
-nav a:nth-child(5):hover ~ .nav-underline {
-  left: 80%;
+  left: 70%;
 }
