--- a/kumatch2/users/templates/board_detail.html
+++ b/kumatch2/users/templates/board_detail.html
@@ -115,8 +115,9 @@
 		<td>{{ board.b_date | date:"Y-m-d H:i" }}</td>
 	</tr>
       </table>
-    <a href="/board/{{ board.pk }}/update/">
-        <button class="btn btn-primary" type="button">게시글 수정</button></a>
+        <a href="/board/{{ board.pk }}/update/"><button class="btn btn-primary" type="button">게시글 수정</button></a>
+
+
   </div>
 
   <div class= "container">
