--- a/kumatch2/users/templates/board_update.html
+++ b/kumatch2/users/templates/board_update.html
@@ -100,9 +100,9 @@
 </div>
 {% endfor %}
 {% endif %}
-      <form action="/board/{{ board.pk }}/update/" method="post" class="form-horizontal">
+      <form action="." method="post" class="form-horizontal">
     {% csrf_token %}                                     <!-- csrftoken 태그 -->
-    <input type="hidden" name="action" value="update">   <!-- action -->
+    <input type="hidden" name="action" value="{% if board %}update{% else %}create{% endif %}">   <!-- action -->
       <table class="table table-striped table-bordered" border="1" width="800" align="center" cellspacing="0" >
         <tr>
 		<th>번호</th>
@@ -118,7 +118,7 @@
 	</tr>
     <tr>
 		<th>작성자</th>
-		<td><input type="text" class="form-control" name="b_writer" value="{{ board.b_writer }}"></td>
+		<td><input type="hidden" class="form-control" name="b_writer" value="{{ user.nname }}"></td>
 	</tr>
     <tr>
 		<th>작성일</th>
