--- a/kumatch2/users/templates/index.html
+++ b/kumatch2/users/templates/index.html
@@ -40,7 +40,7 @@
       <a href="#" class="is-current">매치현황</a>
       <a href="#">랭킹</a>
       <a href="#">알림터</a>
-      <a href="{% url 'user:board_main' %}">커뮤니티</a>
+      <a href="{% url 'teams:teamAll' %}">커뮤니티</a>
       <a href="#">미정1</a>
     <div class="nav-underline"></div>
   </nav>
