--- a/2조_미니프로젝트_0721_ver1/Team 2_Mini Project/css/image_slide_index_style.css
+++ b/2조_미니프로젝트_0721_ver1/Team 2_Mini Project/css/image_slide_index_style.css
@@ -1,4 +1,4 @@
-*{/*margin:0;*/padding:0;}
+*{padding:0;}
 	ul,li{list-style:none;}
 	#slide{height:400px;position:relative;overflow:hidden;}
 	#slide ul{width:400%;height:100%;transition:1s;}
