--- a/장고_0721_ver1_yong/match/templates/my_matchlist.html
+++ b/장고_0721_ver1_yong/match/templates/my_matchlist.html
@@ -75,10 +75,10 @@
       <tbody align = "center">
         <!--{% for article in articles %}-->
           <tr>
-            <td>{{ match.date }}</td>
-            <td>{{ match.place }}</td>
-            <td>{{ match.teamname }}</td>
-            <td>{{ match.note }}</td>
+            <td>{{ mymatch.date }}</td>
+            <td>{{ mymatch.place }}</td>
+            <td>{{ mymatch.teamname }}</td>
+            <td>{{ mymatch.note }}</td>
           </tr>
           <!--{% endfor %}-->
         </tbody>
