--- a/장고_0721_ver1_yong/users/templates/index.html
+++ b/장고_0721_ver1_yong/users/templates/index.html
@@ -26,9 +26,7 @@
         {% else %}
 
             <div id="login_choice">
-            <a href="{% url 'user:login' %}">로그인</a>
-            <span id=login_or>또는</span>
-            <a href="{% url 'user:signup' %}">회원가입</a>
+            <a href="q  입</a>
       </div>
 
 {% endif %}
