--- a/장고_0721_ver1_yong/users/templates/basic_layout.html
+++ b/장고_0721_ver1_yong/users/templates/basic_layout.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
@@ -5,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <title>KUMATCH</title>
-    <link rel="stylesheet" href="css/basic_layout_style.css">
-    <link rel="stylesheet" href="css/image_slide_index_style.css">
-    <link rel="stylesheet" href="css/slider_1.css">
-    <link rel="stylesheet" href="KU_B/font.css">
-    <link rel="stylesheet" href="KU_L/font.css">
-    <link rel="stylesheet" href="KU_M/font.css">
+    <link rel="stylesheet" href="{% static 'css/basic_layout_style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/image_slide_index_style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/slider_1.css' %}">
+    <link rel="stylesheet" href="{% static 'KU_B/font.css' %}">
+    <link rel="stylesheet" href="{% static 'KU_L/font.css' %}">
+    <link rel="stylesheet" href="{% static 'KU_M/font.css' %}">
 
     <style media="screen">
       #match_register{
@@ -27,30 +28,37 @@
     <div class="wrapper_1">
       <header>
         <div id="grid_index">
-          <a href="basic_layout.html"><img id="home_button" src="img/CollogeSymbol.jpg" href="#"></a>
-          <div class="titletext"><h1><a href="basic_layout.html" style="text-decoration: none;color: #8B2331;">KUMATCH</a></h1></div>
-          <div id="login_choice">
-              <a href="login_ver1.html" style="text-decoration: none;">로그인</a>
-              <span id=login_or>또는</span>
-              <a href="sign_up.html" style="text-decoration: none;">회원가입</a>
-          </div>
-          <span style="font-size:30px;cursor:pointer" onclick="openNav()"><img id="menu_button" src="img/personal_settings.png"></span>
+        <a href="{% url 'user:main' %}"><img id="home_button" src="static/img/CollogeSymbol.jpg" href="{% url 'user:main' %}"></a>
+        <div class="titletext"><h1><a href="{% url 'user:main' %}" style="text-decoration: none;color: #8B2331;">KUMATCH</a></h1></div>
+        {% if user.is_authenticated %}
+        <div><br/>
+        <span>{{ user.nname }}님 환영합니다.</span><br/>
+        <a href="{% url 'user:logout' %}">로그아웃</a></div>
+        {% else %}
+
+        <div id="login_choice">
+        <a href="{% url 'user:login' %}">로그인</a>
+        <span id=login_or>또는</span><a href="{% url 'user:signup' %}">회원가입</a>
+        </div>
+
+        {% endif %}
+        <div><img id="menu_button" src="static/img/list_icon.png"></div>
         </div>
       </header>
 
       <nav>
-          <a href="notification_board.html">공지사항</a>
-          <a href="introduction_base.html" class="is-current">KUMATCH 소개</a>
-          <a href="board_main.html">커뮤니티</a>
+        <a href="{% url 'user:notice' %}">공지사항</a>
+        <a href="{% url 'user:intro' %}" class="is-current">KUMATCH 소개</a>
+        <a href="board_main.html">커뮤니티</a>
         <div class="nav-underline"></div>
       </nav>
 
       <aside>
         <div id="mySidenav" class="sidenav">
           <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a><br><br><br>
-          <div id="match_condition"><a href="my_matchlist.html"><img id="football_img" src="img/football.png">  나의 경기 현황</a></div><br><br>
+          <div id="match_condition"><a href="{% url 'match:my_matlst' %}"><img id="football_img" src="img/football.png">  나의 경기 현황</a></div><br><br>
           <div id="modify_my_info"><a href="#"><img id="settings_img" src="img/settings.png">  정보 수정</a></div><br><br>
-          <div id="manage_team"><a href="team_manage.html"><img id="team_img" src="img/team.png">  팀 관리</a></div><br><br>
+          <div id="manage_team"><a href="{% url 'user:manage' %}"><img id="team_img" src="img/team.png">  팀 관리</a></div><br><br>
           <div id="sns"><a href="https://www.instagram.com/" target="_blank"><img id="instagram_img" src="img/instagram.png"></a>
                         <a href="https://www.facebook.com/" target="_blank"><img id="facebook_img" src="img/facebook.png"></a></div>
           <div id="logo" style="text-align:center; font-family:KorUB; font-size:40px; color:#8B2331;">KUMATCH</a>
