--- a/장고_0721_ver1_yong/teams/templates/teams/board_main_ver2.html
+++ b/장고_0721_ver1_yong/teams/templates/teams/board_main_ver2.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
@@ -5,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <title>KUMATCH_board1</title>
-    <link rel="stylesheet" href="css/basic_layout_style.css">
-    <link rel="stylesheet" href="css/image_slide_index_style.css">
-    <link rel="stylesheet" href="css/slider_1.css">
-    <link rel="stylesheet" href="KU_B/font.css">
-    <link rel="stylesheet" href="KU_L/font.css">
-    <link rel="stylesheet" href="KU_M/font.css">
+    <link rel="stylesheet" href="{% static 'css/basic_layout_style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/image_slide_index_style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/slider_1.css' %}">
+    <link rel="stylesheet" href="{% static 'KU_B/font.css' %}">
+    <link rel="stylesheet" href="{% static 'KU_L/font.css' %}">
+    <link rel="stylesheet" href="{% static 'KU_M/font.css' %}">
     <style media="screen">
 
       #board_img_1{
@@ -58,56 +59,68 @@
     <div class="wrapper_1">
       <header>
         <div id="grid_index">
-          <a href="basic_layout.html"><img id="home_button" src="img/CollogeSymbol.jpg" href="#"></a>
-          <div class="titletext"><h1><a href="basic_layout.html" style="text-decoration: none;color: #8B2331;">KUMATCH</a></h1></div>
-          <div id="login_choice">
-              <a href="login_ver1.html" style="text-decoration: none;">로그인</a>
-              <span id=login_or>또는</span>
-              <a href="sign_up.html" style="text-decoration: none;">회원가입</a>
-          </div>
-          <span style="font-size:30px;cursor:pointer" onclick="openNav()"><img id="menu_button" src="img/personal_settings.png"></span>
+        <a href="{% url 'user:main' %}"><img id="home_button" src="/static/img/CollogeSymbol.jpg" href="{% url 'user:main' %}"></a>
+        <div class="titletext"><h1><a href="{% url 'user:main' %}" style="text-decoration: none;color: #8B2331;">KUMATCH</a></h1></div>
+        {% if user.is_authenticated %}
+        <div><br><br><br><br>
+        <span>{{ user.nname }}님 환영합니다.</span><br/>
+        <a href="{% url 'user:logout' %}">로그아웃</a></div>
+        {% else %}
+
+        <div id="login_choice">
+        <a href="{% url 'user:login' %}">로그인</a>
+        <span id=login_or>또는</span><a href="{% url 'user:signup' %}">회원가입</a>
+        </div>
+
+        {% endif %}
+        <span style="font-size:30px;cursor:pointer" onclick="openNav()"><img id="menu_button" src="/static/img/personal_settings.png"></span>
         </div>
       </header>
 
       <nav>
-          <a href="notification_board.html">공지사항</a>
-          <a href="introduction_base.html" class="is-current">KUMATCH 소개</a>
-          <a href="board_main.html">커뮤니티</a>
+        <a href="{% url 'user:notice' %}">공지사항</a>
+        <a href="{% url 'user:intro' %}" class="is-current">KUMATCH 소개</a>
+        <a href="{% url 'teams:teamAll' %}">커뮤니티</a>
         <div class="nav-underline"></div>
       </nav>
+      <hr id=grid_line>
 
       <div id="board_grid">
       <div class="board_main">
           <div id="board_menu">
-            <span><img id=board_img_1 src="img/board_1.png"> <a href="board_main.html" style="font-size : 15px; position:relative; top:-20px; text-decoration-style:double; color : red;">팀 소개 게시판</a></span><br>
-            <span><img id=board_img_2 src="img/board_2.png"> <a href="board_2.html" style="font-size : 15px; position:relative; top:-20px; text-decoration : none; color : black;">인원 모집 게시판</a></span><br>
-            <span><img id=board_img_3 src="img/board_3.png"> <a href="board_3.html" style="font-size : 15px; position:relative; top:-20px; text-decoration : none; color : black;">사진 게시판</a></span><br>
+            <span><img id=board_img_1 src="/static/img/board_1.png"> <a href="{% url 'teams:teamAll' %}" style="font-size : 15px; position:relative; top:-20px; text-decoration-style:double; color : red;">팀 소개 게시판</a></span><br>
+            <span><img id=board_img_2 src="/static/img/board_2.png"> <a href="{% url 'teams:recruitAll' %}" style="font-size : 15px; position:relative; top:-20px; text-decoration : none; color : black;">인원 모집 게시판</a></span><br>
+            <span><img id=board_img_3 src="/static/img/board_3.png"> <a href="board_3.html" style="font-size : 15px; position:relative; top:-20px; text-decoration : none; color : black;">사진 게시판</a></span><br>
         </div>
       </div>
 
       <div id="board_name1">
        <h2 style="  font-family: KorUL; color :#8B2331;">팀 소개 게시판</h2><br>
-       <div id=write_button> <input type="button" name="board_write" value="  글작성  "> </div>
+       <div id=write_button> <a href="{% url 'teams:reg' %}" ><button class="btn btn-primary" type="button" >신규 팀 등록</button></a> </div>
        <div id=line1> </div>
           <table border="1" width="800" align="center" cellspacing="0" >
             <thead>
             <tr>
-              <th width="150" align="center" bgcolor="#FFF0F0"> 번 호 </th>
-              <th width="700" align="center" bgcolor="#FFF0F0"> 제 목 </th>
-              <th width="200" align="center" bgcolor="#FFF0F0"> 작성자 </th>
-              <th width="300" align="center" bgcolor="#FFF0F0"> 작성일 </th>
+              <th width="150" align="center" bgcolor="#FFF0F0"> 팀 명 </th>
+              <th width="400" align="center" bgcolor="#FFF0F0"> 학과 / 동아리 </th>
+              <th width="200" align="center" bgcolor="#FFF0F0"> 대표자 </th>
+              <th width="200" align="center" bgcolor="#FFF0F0"> 인원수 </th>
             </tr>
           </thead>
           <tbody align = "center">
-            <!--{% for article in articles %}-->
-              <tr>
-                <td>{{ article.pk }}</td>
-                <td>{{ article.title }}</td>
-                <td>{{ article.author }}</td>
-                <td>{{ article.date }}</td>
-              </tr>
-              <!--{% endfor %}-->
-            </tbody>
+        {% if team_list %}
+        {% for t in team_list %}
+          <tr onclick="location.href='{% url 'teams:teamDet' t.id %}'">  <!-- 테이블 행 click 시 url 이동 -->
+            <td>{{ t.t_name }}</td>
+            <td>{{ t.t_major }}</td>
+            <td>{{ t.t_captain }}</td>
+            <td>{{ t.t_memCount }}</td>
+          </tr>
+        {% endfor %}
+        {% else %}
+			<tr></tr><td>Team: 0</td>
+		{% endif %}
+        </tbody>
 
         </table>
       </div>
@@ -116,11 +129,11 @@
       <aside>
         <div id="mySidenav" class="sidenav">
           <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a><br><br><br>
-          <div id="match_condition"><a href="my_matchlist.html"><img id="football_img" src="img/football.png">  나의 경기 현황</a></div><br><br>
-          <div id="modify_my_info"><a href="#"><img id="settings_img" src="img/settings.png">  정보 수정</a></div><br><br>
-          <div id="manage_team"><a href="team_manage.html"><img id="team_img" src="img/team.png">  팀 관리</a></div><br><br>
-          <div id="sns"><a href="https://www.instagram.com/" target="_blank"><img id="instagram_img" src="img/instagram.png"></a>
-                        <a href="https://www.facebook.com/" target="_blank"><img id="facebook_img" src="img/facebook.png"></a></div>
+          <div id="match_condition"><a href="{% url 'match:my_matlst' %}"><img id="football_img" src="/static/img/football.png">  나의 경기 현황</a></div><br><br>
+          <div id="modify_my_info"><a href="#"><img id="settings_img" src="/static/img/settings.png">  정보 수정</a></div><br><br>
+          <div id="manage_team"><a href="{% url 'user:manage' %}"><img id="team_img" src="/static/img/team.png">  팀 관리</a></div><br><br>
+          <div id="sns"><a href="https://www.instagram.com/" target="_blank"><img id="instagram_img" src="/static/img/instagram.png"></a>
+                        <a href="https://www.facebook.com/" target="_blank"><img id="facebook_img" src="/static/img/facebook.png"></a></div>
           <div id="logo" style="text-align:center; font-family:KorUB; font-size:40px; color:#8B2331;">KUMATCH</a>
         </div>
 
