--- a/장고_0721_ver1_yong/teams/templates/teams/board_update.html
+++ b/장고_0721_ver1_yong/teams/templates/teams/board_update.html
@@ -1,18 +1,19 @@
+{% load static %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <title>KUMATCH</title>
-    <link rel="stylesheet" href="/static/css/index_style.css">
-    <link rel="stylesheet" href="/static/css/menu_style.css">
-    <link rel="stylesheet" href="/static/css/image_slide_index_style.css">
-    <link rel="stylesheet" href="/static/css/slider_1.css">
-    <link rel="stylesheet" href="/static/KU_B/font.css">
-    <link rel="stylesheet" href="/static/KU_L/font.css">
-    <link rel="stylesheet" href="/static/KU_M/font.css">
-
+    <title>KUMATCH_board1</title>
+    <link rel="stylesheet" href="{% static 'css/basic_layout_style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/image_slide_index_style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/slider_1.css' %}">
+    <link rel="stylesheet" href="{% static 'KU_B/font.css' %}">
+    <link rel="stylesheet" href="{% static 'KU_L/font.css' %}">
+    <link rel="stylesheet" href="{% static 'KU_M/font.css' %}">
     <style media="screen">
+
       #board_img_1{
         width : 40px;
         margin : 10px;
@@ -25,78 +26,81 @@
         width : 40px;
         margin : 10px;
       }
+      #board_grid{
+        display : grid;
+        grid-template-columns : 1fr 3fr;
+        margin-left : 50px;
+        margin-top : 50px;
+      }
+
       #board_name1{
-        position: absolute;
-        left : 400px;
-        top : 280px;
+        width : 500px;
+        margin-left : 30px;
+      }
+      #board_menu{
+        border-style : solid;
+        border-width : 1px;
+        border-color : black;
+        margin-top : 30px;
+        width : 300px;
       }
       #line1{
         border-top-style : solid;
         border-color : #8B2331;
         margin-bottom : 15px;
+        width : 1070px;
       }
+
       h2{font-size : 35px}
-      .text{
-        display : none;
-      }
-
-      .container : hover .text{
-        display : block;
-      }
-
     </style>
   </head>
-  <body>
-    <header>
-      <div id="grid">
-        <div><img id="home_button" href="{% url 'user:main' %}" src="/static/img/CollogeSymbol.jpg" ></div>
-        <div class="titletext"><h1><a href="{% url 'user:main' %}">KUMATCH</a></div></h1>
-          {% if user.is_authenticated %}
-          <div><br/>
-          <span>{{ user.nname }}님 환영합니다.</span><br/>
-              <a href="{% url 'user:logout' %}">로그아웃</a></div>
-          {% else %}
 
-              <div id="login_choice">
-              <a href="{% url 'user:login' %}">로그인</a>
-              <span id=login_or>또는</span>
-              <a href="{% url 'user:signup' %}">회원가입</a>
+  <body>
+    <div class="wrapper_1">
+      <header>
+        <div id="grid_index">
+        <a href="{% url 'user:main' %}"><img id="home_button" src="/static/img/CollogeSymbol.jpg" href="{% url 'user:main' %}"></a>
+        <div class="titletext"><h1><a href="{% url 'user:main' %}" style="text-decoration: none;color: #8B2331;">KUMATCH</a></h1></div>
+        {% if user.is_authenticated %}
+        <div><br><br><br><br>
+        <span>{{ user.nname }}님 환영합니다.</span><br/>
+        <a href="{% url 'user:logout' %}">로그아웃</a></div>
+        {% else %}
+
+        <div id="login_choice">
+        <a href="{% url 'user:login' %}">로그인</a>
+        <span id=login_or>또는</span><a href="{% url 'user:signup' %}">회원가입</a>
         </div>
 
-  {% endif %}
-        <div><img id="menu_button" src="/static/img/list_icon.png"></div>
+        {% endif %}
+        <span style="font-size:30px;cursor:pointer" onclick="openNav()"><img id="menu_button" src="/static/img/personal_settings.png"></span>
+        </div>
+      </header>
+
+      <nav>
+        <a href="{% url 'user:notice' %}">공지사항</a>
+        <a href="{% url 'user:intro' %}" class="is-current">KUMATCH 소개</a>
+        <a href="{% url 'teams:teamAll' %}">커뮤니티</a>
+        <div class="nav-underline"></div>
+      </nav>
+      <hr id=grid_line>
+
+      <div id="board_grid">
+      <div class="board_main">
+          <div id="board_menu">
+            <span><img id=board_img_1 src="/static/img/board_1.png"> <a href="{% url 'teams:teamAll' %}" style="font-size : 15px; position:relative; top:-20px; text-decoration-style:double; color : red;">팀 소개 게시판</a></span><br>
+            <span><img id=board_img_2 src="/static/img/board_2.png"> <a href="{% url 'teams:recruitAll' %}" style="font-size : 15px; position:relative; top:-20px; text-decoration : none; color : black;">인원 모집 게시판</a></span><br>
+            <span><img id=board_img_3 src="/static/img/board_3.png"> <a href="board_3.html" style="font-size : 15px; position:relative; top:-20px; text-decoration : none; color : black;">사진 게시판</a></span><br>
+        </div>
       </div>
-    </header>
 
-    <nav>
-        <a href="#" class="is-current">매치현황</a>
-        <a href="#">랭킹</a>
-        <a href="#">알림터</a>
-        <a href="{% url 'user:board_main' %}">커뮤니티</a>
-        <a href="#">미정1</a>
-      <div class="nav-underline"></div>
-    </nav>
-    <hr id=grid_line>
-
-
-
-    <div class="board_main">
-      <div class="aside_menu">
-        <span><img id=board_img_1 src="/static/img/board_1.png"> <a href="{% url 'user:board_main' %}" style="font-size : 15px; position:relative; top:-20px; text-decoration-style:double; color : red;">팀 소개 게시판</a></span><br>
-        <span><img id=board_img_2 src="/static/img/board_2.png"> <a href="board_2.html" style="font-size : 15px; position:relative; top:-20px; text-decoration : none; color : black;">인원 모집 게시판</a></span><br>
-        <span><img id=board_img_3 src="/static/img/board_3.png"> <a href="board_3.html" style="font-size : 15px; position:relative; top:-20px; text-decoration : none; color : black;">사진 게시판</a></span><br>
-        <span><img id=board_img_3 src="/static/img/board_3.png"> <a href="#" style="font-size : 15px; position:relative; top:-20px; text-decoration : none; color : black;">미정</a></span><br>
-        <span><img id=board_img_3 src="/static/img/board_3.png"> <a href="#" style="font-size : 15px; position:relative; top:-20px; text-decoration : none; color : black;">미정</a></span>
-      </div>
-    </div>
-
-
-   <h2 style="  font-family: KorUL; color :#8B2331;">팀 소개 게시판</h2><br>
-   <div id=line1> </div>
-      <form action="{% url 'teams:modCon' %}" method="post" class="form-horizontal">
-    {% csrf_token %}                                     <!-- csrftoken 태그 -->
-      <table class="table table-striped table-bordered" border="1" width="800" align="center" cellspacing="0" >
-		<input type="hidden" class="form-control" name="id" value={{team_info.id}}>
+      <div id="board_name1">
+       <h2 style="  font-family: KorUL; color :#8B2331;">팀 소개 게시판</h2><br>
+       <div id=line1> </div>
+          <form action="{% url 'teams:modCon' %}" method="post" class="form-horizontal">
+              {% csrf_token %}
+          <table border="1" width="800" align="center" cellspacing="0" >
+          <input type="hidden" class="form-control" name="id" value={{team_info.id}}>
     <tr>
 		<th>팀 명</th>
 		<td><input type="text" class="form-control" name="name" value={{team_info.t_name}}></td>
@@ -113,12 +117,52 @@
 		<th>인원수</th>
 		<td><input type="number" class="form-control" name="memCount" value={{team_info.t_memCount}}></td>
 	</tr>
+
+
       </table>
-        <button class="btn btn-primary" type="submit" name="Modify"> 저 장 </button>
+      <button class="btn btn-primary" type="submit" name="Modify"> 저 장 </button>
       </form>
+      </div>
+      </div>
+
+      <aside>
+        <div id="mySidenav" class="sidenav">
+          <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a><br><br><br>
+          <div id="match_condition"><a href="{% url 'match:my_matlst' %}"><img id="football_img" src="/static/img/football.png">  나의 경기 현황</a></div><br><br>
+          <div id="modify_my_info"><a href="#"><img id="settings_img" src="/static/img/settings.png">  정보 수정</a></div><br><br>
+          <div id="manage_team"><a href="{% url 'user:manage' %}"><img id="team_img" src="/static/img/team.png">  팀 관리</a></div><br><br>
+          <div id="sns"><a href="https://www.instagram.com/" target="_blank"><img id="instagram_img" src="/static/img/instagram.png"></a>
+                        <a href="https://www.facebook.com/" target="_blank"><img id="facebook_img" src="/static/img/facebook.png"></a></div>
+          <div id="logo" style="text-align:center; font-family:KorUB; font-size:40px; color:#8B2331;">KUMATCH</a>
+        </div>
+
+        <script>
+        function openNav() {
+            document.getElementById("mySidenav").style.width = "250px";
+        }
+
+        function closeNav() {
+            document.getElementById("mySidenav").style.width = "0";
+        }
+        </script>
+       </div>
+      </aside>
+      <!--<img id=main_img src="img/practice.jpg">-->
+  </div>
 
 
   <div class= "container">
     <p class = "title">page1</p>
     <p class = "text">text</p>
   </div>
+
+
+    <footer>
+      <br><br>
+      <span>[30019] 세종특별자치시 세종로 2511 고려대학교 세종캠퍼스</span>
+			<span> T. 044-860-1114</span>
+			<span> F. 044-860-1048</span>
+				<p style="color:#C7B9AB;">Copyright ⓒ <span style="color:#FF661B;">KOREA University Sejong Campus</span> All Rights Reserved</p>
+    </footer>
+  </body>
+</html>
