--- a/Team 2_Mini Project/css/basic_layout_style.css
+++ b/Team 2_Mini Project/css/basic_layout_style.css
@@ -55,14 +55,12 @@
 nav {
   position: relative;
   display: flex;
-  width: 640px;
   margin: 1em auto;
   font-family: KorUL;
   font-size: 18px;
 }
 nav a {
   margin: auto;
-  display: block;
   width: 20%;
   padding: .75em 0;
   color: #333;
@@ -73,28 +71,28 @@ nav a {
   position: absolute;
   left: 0;
   bottom: -5px;
-  width: 25%;
+  width: 11.5%;
   height: 2px;
   background: #706258;
   transition: all .3s ease-in-out;
 }
 nav a:nth-child(1).is-current ~ .nav-underline {
-  left: 5%;
+  left: 11%;
 }
 nav a:nth-child(2).is-current ~ .nav-underline {
-  left: 37.5%;
+  left: 44.2%;
 }
 nav a:nth-child(3).is-current ~ .nav-underline {
-  left: 70%;
+  left: 77.4%;
 }
 nav a:nth-child(1):hover ~ .nav-underline {
-  left: 5%;
+  left: 11%;
 }
 nav a:nth-child(2):hover ~ .nav-underline {
-  left: 37.5%;
+  left: 44.2%;
 }
 nav a:nth-child(3):hover ~ .nav-underline {
-  left: 70%;
+  left: 77.4%;
 }
 
 body {
@@ -144,13 +142,26 @@ body {
   right: 50px;
 }
 
-#football_img, #settings_img, #team_img, #instagram_img {
+#football_img, #settings_img, #team_img {
   width: 15%;
 }
 
 #logo {
   popsition: absolute;
-  bottom: 0;
+  margin-top : 250px;
+
+}
+
+#sns {
+  display : grid;
+  grid-template-columns: 1fr 1fr;
+  padding-top: 30px;
+  border-top: 1px solid #C7B9AB;
+  margin-left: 30px;
+  margin-right: 30px;
+}
+#instagram_img, #facebook_img {
+  width: 70%;
 }
 
 @media screen and (max-height: 450px) {
@@ -165,7 +176,7 @@ html, body {
   height: 100%;
 }
 
-.wrapper {
+.wrapper_1 {
   height: auto;
   min-height: 100%;
   padding-bottom: 120px;
@@ -181,4 +192,11 @@ footer {
   color: #cecece;
   text-align: center;
   color: white;
+}
+
+#match_list{
+  border-style :ridge;
+  left : 250px;
+  position:relative;
+  top : -300px;
 }
