--- a/장고_0721_ver1_yong/teams/templates/teams/board_detail.html
+++ b/장고_0721_ver1_yong/teams/templates/teams/board_detail.html
@@ -111,6 +111,10 @@
 		<td>{{team_info.t_major}}</td>
 	</tr>
     <tr>
+		<th>소 개</th>
+		<td>{{team_info.t_memo | linebreaksbr }}</td>
+	</tr>
+    <tr>
 		<th>대표자</th>
 		<td>{{team_info.t_captain}}</td>
 	</tr>
@@ -133,7 +137,7 @@
           <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a><br><br><br>
           <div id="match_condition"><a href="{% url 'match:my_matlst' %}"><img id="football_img" src="/static/img/football.png">  나의 경기 현황</a></div><br><br>
           <div id="modify_my_info"><a href="#"><img id="settings_img" src="/static/img/settings.png">  정보 수정</a></div><br><br>
-          <div id="manage_team"><a href="{% url 'user:manage' %}"><img id="team_img" src="/static/img/team.png">  팀 관리</a></div><br><br>
+          <div id="manage_team"><a href="{% url 'players:playerAll' %}"><img id="team_img" src="/static/img/team.png">  팀 관리</a></div><br><br>
           <div id="sns"><a href="https://www.instagram.com/" target="_blank"><img id="instagram_img" src="/static/img/instagram.png"></a>
                         <a href="https://www.facebook.com/" target="_blank"><img id="facebook_img" src="/static/img/facebook.png"></a></div>
           <div id="logo" style="text-align:center; font-family:KorUB; font-size:40px; color:#8B2331;">KUMATCH</a>
