--- a/장고_0723_최종버전테스트/users/templates/introduction_base.html
+++ b/장고_0723_최종버전테스트/users/templates/introduction_base.html
@@ -74,7 +74,7 @@
           </tr>
           <tr>
             <td colspan="2">
-              <div id="when">축구&풋살하고 싶을 땐!</div>
+              <div id="when">축구하고 싶을 땐!</div>
               <br>
               <div id="answer">KUMATCH</div>
               <br>
