--- a/장고_0723_최종버전테스트/teams/templates/teams/board_main.html
+++ b/장고_0723_최종버전테스트/teams/templates/teams/board_main.html
@@ -82,7 +82,7 @@
 
     <div class="board_main">
       <div class="aside_menu">
-        <span><img id=board_img_1 src="/static/img/board_1.png"> <a href="{% url 'user:board_main' %}" style="font-size : 15px; position:relative; top:-20px; text-decoration-style:double; color : red;">팀 소개 게시판</a></span><br>
+        <span><img id=board_img_1 src="/static/img/board_1.png"> <a href="{% url 'user:board_main' %}" style="font-size : 15px; position:relative; top:-20px; text-decoration : none; color : black;">팀 소개 게시판</a></span><br>
         <span><img id=board_img_2 src="/static/img/board_2.png"> <a href="board_2.html" style="font-size : 15px; position:relative; top:-20px; text-decoration : none; color : black;">인원 모집 게시판</a></span><br>
         <span><img id=board_img_3 src="/static/img/board_3.png"> <a href="board_3.html" style="font-size : 15px; position:relative; top:-20px; text-decoration : none; color : black;">사진 게시판</a></span><br>
         <span><img id=board_img_3 src="/static/img/board_3.png"> <a href="#" style="font-size : 15px; position:relative; top:-20px; text-decoration : none; color : black;">미정</a></span><br>
